--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<meta charset="utf-8">
 	
-	<title>Volleybomb</title>
+	<title>VolleybombMP</title>
 	
 	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -19,7 +19,7 @@
 	<script type="text/javascript" src="./lib/socket.io.js"></script>
 	<script type="text/javascript" src="./lib/simplepeer.min.js"></script>
 	<script type="text/javascript" src="./lib/mobile-detect.min.js"></script>
-	<script type="text/javascript" src="./Volleybomb.js"></script>
+	<script type="text/javascript" src="./VolleybombMP.js"></script>
 	
 	<script>
 		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, { capture: false, passive: false });
@@ -52,7 +52,7 @@
 	<div id="openfl-content"></div>
 	
 	<script type="text/javascript">
-		lime.embed ("Volleybomb", "openfl-content", 0, 0, { parameters: {} });
+		lime.embed ("VolleybombMP", "openfl-content", 0, 0, { parameters: {} });
 	</script>
 	
 </body>
